--- a/index.html
+++ b/index.html
@@ -7,10 +7,206 @@
     <title>Best_shop</title>
     <link rel="stylesheet" href="assets/CSS/normalize.css">
     <link rel="stylesheet" href="assets/CSS/reset.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@300;400;700;800&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="assets/CSS/style.css">
 
 </head>
 <body>
+<header class="page-header">
+    <nav class="nav">
+    <div class="container">
+        <div class="page-header-logo">
+<h3 class="Logo-text">BestShop</h3>
+        </div>
+       <div class="page-header-links">
+                 <a href="#us"class="link">WHY US</a>
+                 <a href="#why_us" class="link">BENEFITS</a>
+                <a href="#prices" class="link">PRICES</a>
+                <a href="#"class="link">CONTACT</a>
+       </div>
+    </div>
+    </nav>
 
+    <section class="header_container">
+        <img src="../assets/Images/Background.png" alt="background with laptop image" class="header_img"/>
+        <h1 class="header_title">Sell More!</h1>
+        <p class="header_text">Open shop on our platform and increase your sales</p>
+        <a href="" class="btn">Open your shop</a>
+    </section>
+</header>
+<main class="statistic" id="us">
+    <div class="container">
+        <h2 class="statistic_title">The most popular sales platform in country</h2>
+        <section class="statistic_container">
+        <div class="statistic_single">
+            <div class="statistics__circle">
+        <img src="../assets/Images/Person.svg" alt="person"class="statistic_icon">
+        </div>
+            <h4 class="statistic_number">100000+</h4>
+            <p class="statistic_text">daily entries</p>
+        </div>
+            <div class="statistic_single">
+                <div class="statistics__circle">
+            <img src="../assets/Images/Eye.svg" alt="person"class="statistic_icon">
+            </div>
+            <h4 class="statistic_number">2000000+</h4>
+            <p class="statistic_text">seen products every day</p>
+            </div>
+                <div class="statistic_single">
+                    <div class="statistics__circle">
+            <img src="../assets/Images/Catalog.svg" alt="person"class="statistic_icon">
+                </div>
+            <h4 class="statistic_number">100000+</h4>
+            <p class="statistic_text">added posts daily</p>
+        </div>
+        </section>
+    </div>
+</main>
+
+<section class="benefits" id="why_us">
+    <div class="container">
+        <div class="benefits_single">
+            <div class="benefits_single_text">
+            <h3 class="benefits_title">Be always first</h3>
+            <p class="benefits_text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.</p>
+            </div>
+            <div class="benefits_single_photo">
+                <img src="./assets/Images/Macbook.png" class="benefits_romb" width="382" height="219">
+                <div class="images_background_romb"></div>
+                </div>
+        </div>
+        <div class="benefits_single">
+            <div class="benefits_single_photo">
+                <img src="./assets/Images/iPhone.png" class="banefits_iPhone" width="426" height="328">
+                <div class="images_background_circle"></div>
+            </div>
+            <div class="benefits_single_text">
+                <h3 class="benefits_title">Your shop is where you are!</h3>
+                <p class="benefits_text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.</p>
+            </div>
+        </div>
+
+        <div class="benefits_single">
+            <div class="benefits_single_text">
+                <h3 class="benefits_title">Increase recognition your brand!</h3>
+                <p class="benefits_text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.</p>
+            </div>
+            <div class="benefits_single_photo">
+                <img src="./assets/Images/Trumpet.png"width="296" height="208">
+                <div class="images_background"></div>
+            </div>
+        </div>
+    </div>
+</section>
+<!--sekcja z cenami-->
+
+<section class="pricing container" id="prices">
+        <h2 class="pricing_title">Pricing</h2>
+        <div class="pricing_boxes">
+
+            <div class="pricing_box pricing_box--basic">
+                <div class="pricing__details">
+            <h3 class="pricing_offer_title">Basic</h3>
+            <h4 class="pricing_price">$0</h4>
+                    </div>
+            <ul class="pricing_items">
+                <li class="pricing_item">100 MB HDD</li>
+                <li class="pricing_item">1 Subdomain</li>
+                <li class="pricing_item">2 E-mails</li>
+                <li class="pricing_item pricing_item--not">Two years license</li>
+                <li class="pricing_item pricing_item--not">Full support</li>
+            </ul>
+            <a href="#"class="btn">Begin</a>
+            </div>
+
+        <div class="pricing_box pricing_box--professional">
+            <div class="pricing__details">
+        <h3 class="pricing_offer_title">Professional</h3>
+        <h4 class="pricing_price">$25</h4>
+        <h5 class="pricing_price_text">Limited offer</h5>
+                </div>
+         <ul class="pricing_items">
+        <li class="pricing_item">500 MB HDD</li>
+        <li class="pricing_item">2 Subdomain</li>
+        <li class="pricing_item">5 E-mails</li>
+        <li class="pricing_item pricing_item--not">One years license</li>
+        <li class="pricing_item pricing_item--not">Full support</li>
+         </ul>
+          <a href="#"class="btn">Begin</a>
+         </div>
+
+    <div class="pricing_box pricing_box--premium">
+        <div class="pricing__details">
+        <h3 class="pricing_offer_title">Premium</h3>
+        <h4 class="pricing_price">$60</h4>
+            <h5 class="pricing_price_text">Limited offer</h5>
+            </div>
+         <ul class="pricing_items">
+        <li class="pricing_item">2 GB HDD</li>
+        <li class="pricing_item">5 Subdomain</li>
+        <li class="pricing_item">20 E-mails</li>
+        <li class="pricing_item pricing_item--not">Two years license</li>
+        <li class="pricing_item pricing_item--not">Full support</li>
+         </ul>
+        <a href="#"class="btn">Begin</a>
+    </div>
+
+    </div>
+</section>
+
+
+
+<section class="formular" id="contact">
+    <div class="container formular">
+        <div class="contact_column">
+            <h2 class="contact_text">Any questions?</h2>
+            <p class="contact_small_text">Leave your email address or call us!</p>
+            <div class="contact_details">
+                <a href="mailto:info@bestshop.xyz" class="details_item">
+                   <img src="../assets/Images/Mail Icon.svg" alt="mail">info@bestshop.xyz</a>
+                <a href="tel:123456789" class="details_item">
+                   <img src="../assets/Images/Phone Icon.svg" alt="phone">123 456 789</a>
+            </div>
+            </div>
+            <div class="contact_column">
+                <form class="form">
+                    <div class="form__field">
+                    <label class="form__label" for="name">NAME</label>
+                    <input type="text" class="form_input name" id="name"/>
+                    </div>
+                    <div class="form__field">
+                    <label class="form__label" for="email">E-MAIL</label>
+                    <input type="email" class="form_input email" id="email"/>
+                        </div>
+                    <div class="form__consent">
+                    <label class="form__checkbox">
+                        <input type="checkbox"/>
+                        <span class="checkbox"></span>
+                        <p class="consent__text">I hereby give consent for my personal data included in my application to be processed for the purposes of the recruitment process under the European Parliament’s and Council of the European Union Regulation on the Protection of Natural Persons as of 27 April 2016, with regard to the processing of personal data and on the free movement of such data, and repealing Directive 95/46/EC (Data Protection Directive)</p>
+                    </label>
+                    </div>
+                    <button class="btn" type="submit">Send</button>
+                </form>
+    </div>
+</section>
+
+
+
+<section class="footer">
+    <div class="footer_container">
+    <div class="footer_logo">
+        <h3 class="Logo-text">BestShop</h3>
+        <p class="footer_copyright">© 2019 BestShop LTD, All Rights Reserved</p>
+    </div>
+    <div class="footer_icon">
+    <a href="#"><img src="./assets/Images/Twitter.svg" alt="twitter"/></a>
+        <a href="#"><img src="./assets/Images/Facebook.svg" alt="facebook"/></a>
+    </div>
+</section>
 </body>
 </html>
